--- a/index.html
+++ b/index.html
@@ -120,6 +120,32 @@
             </div>
         </section>
     </div>
+    <div class="wrapper">
+        <section class="categories">
+            <div class="title">
+                <p>Categories</p>
+                <p>Find what you are looking for</p>
+            </div>
+                <div class="images">
+                    <div class="image-cards">
+                        <div class="image-card">
+                            <img src="img/categorie-plant-1.png" alt="not found">
+                            <p>Natural Plants</p>
+                        </div>
+                        <div class="image-card">
+                            <img src="img/categorie-plant-2.png" alt="not found">
+                            <p>Plant Accessories</p>
+                        </div>
+                        <div class="image-card">
+                            <img src="img/categorie-plant-3.png" alt="not found">
+                            <p>Artificial Plants</p>
+                        </div>
+                    </div>
+                <p class="description">Horem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                <a href="#" class="btn white">Explore</a>
+            </div>
+        </section>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
