--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                     <div class="tags">
                         <ul>
                             <li><a href="#" class="active">Home</a></li>
-                            <li><a href="#">Products</a></li>
-                            <li><a href="#">Contacts</a></li>
+                            <li><a href="#categories" class="nav-links">Products</a></li>
+                            <li><a href="#footer-main" class="nav-links">Contacts</a></li>
                         </ul>
                     </div>
                 </div>
@@ -39,7 +39,7 @@
                 </div>
             </nav>
 
-            <div class="hero-section">
+            <div class="hero-section" id="hero-section">
                 <div class="hero-section-box">
                     <div class="left">
                         <h1>Buy your dream plants</h1>
@@ -121,7 +121,7 @@
         </section>
     </div>
     <div class="wrapper">
-        <section class="categories">
+        <section class="categories" id="categories">
             <div class="title">
                 <p>Categories</p>
                 <p>Find what you are looking for</p>
@@ -146,6 +146,85 @@
             </div>
         </section>
     </div>
+    <div class="wrapper">
+        <section class="testimonial">
+            <h2>What customers say about <br>GREENMIND?</h2>
+            <div class="review-cards">
+                <div class="review-card review-card-1">
+                    <div class="content">
+                        <p>Jorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                    </div>
+                    <div class="lower">
+                        <img src="img/guy-1.svg" alt="">
+                        <div class="info">
+                            <span>John Doe</span>
+                            <span>YouTuber</span>
+                        </div>
+                        <div class="rating">
+                            4.5
+                        </div>
+                    </div>
+                    <img src="img/inverted-quotes.svg" alt="">
+                </div>
+                
+                <div class="review-card review-card-2">
+                    <div class="content">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur dignissimos magni dolore iure, pariatur in rem ratione amet, animi facilis veritatis. Facilis amet totam quas, voluptates nulla deserunt officiis</p>
+                    </div>
+                    <div class="lower">
+                        <img src="img/guy-2.svg" alt="" class="guy-2">
+                        <div class="info">
+                            <span>Scarlett Waterloo</span>
+                            <span>Designer</span>
+                        </div>
+                        <div class="rating">
+                            4.5
+                        </div>
+                    </div>
+                    <img src="img/inverted-quotes.svg" alt="">
+                </div>
+            </div>
+            <img src="img/testimonial-extra.svg" alt="" class="extra">
+        </section>
+    </div>
+    <footer>
+        <div class="wrapper">
+            <div class="footer-main" id="footer-main">
+                <div class="left">
+                    <span>GREENMIND</span>
+                    <p>We help you find your dream plant</p>
+                    <div class="social">
+                        <img src="img/facebook.svg" alt="">
+                        <img src="img/instagram.svg" alt="">
+                        <img src="img/twitter.svg" alt="">
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="links-container">
+                        <div class="links">
+                            <p class="links-title">Information</p>
+                            <p>About</p>
+                            <p>Product</p>
+                            <p>Blog</p>
+                        </div>
+                        <div class="links">
+                            <p class="links-title">Company</p>
+                            <p>Community</p>
+                            <p>Career</p>
+                            <p>Our Story</p>
+                        </div>
+                        <div class="links">
+                            <p class="links-title">Contact</p>
+                            <p>Getting Started</p>
+                            <p>Pricing</p>
+                            <p>Resources</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <p class="copyright">2023 all Right Reserved Term of use GREENMIND</p>
+        </div>
+    </footer>
     <script src="app.js"></script>
   </body>
 </html>
