--- a/index.html
+++ b/index.html
@@ -157,32 +157,40 @@
                     <div class="lower">
                         <img src="img/guy-1.svg" alt="">
                         <div class="info">
+                            <div class="aligner">
                             <span>John Doe</span>
                             <span>YouTuber</span>
+                            </div>
                         </div>
                         <div class="rating">
+                            <div class="aligner">
                             4.5
+                            </div>
+                        </div>
+                    </div>
+                    <img src="img/inverted-quotes.svg" alt="">
+                </div>
+                <div class="review-card review-card-2">
+                    <div class="content">
+                        <p>Jorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                    </div>
+                    <div class="lower">
+                        <img src="img/guy-2.svg" alt="">
+                        <div class="info">
+                            <div class="aligner">
+                            <span>Scarlett Waterloo</span>
+                            <span>Designer</span>
+                            </div>
+                        </div>
+                        <div class="rating">
+                            <div class="aligner">
+                            4.5
+                            </div>
                         </div>
                     </div>
                     <img src="img/inverted-quotes.svg" alt="">
                 </div>
                 
-                <div class="review-card review-card-2">
-                    <div class="content">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur dignissimos magni dolore iure, pariatur in rem ratione amet, animi facilis veritatis. Facilis amet totam quas, voluptates nulla deserunt officiis</p>
-                    </div>
-                    <div class="lower">
-                        <img src="img/guy-2.svg" alt="" class="guy-2">
-                        <div class="info">
-                            <span>Scarlett Waterloo</span>
-                            <span>Designer</span>
-                        </div>
-                        <div class="rating">
-                            4.5
-                        </div>
-                    </div>
-                    <img src="img/inverted-quotes.svg" alt="">
-                </div>
             </div>
             <img src="img/testimonial-extra.svg" alt="" class="extra">
         </section>
