--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                             </div>
                         </div>
                     </div>
-                    <img src="img/inverted-quotes.svg" alt="">
+                    <img id="inverted-quotes-1" src="img/inverted-quotes.svg" alt="">
                 </div>
                 <div class="review-card review-card-2">
                     <div class="content">
@@ -188,7 +188,7 @@
                             </div>
                         </div>
                     </div>
-                    <img src="img/inverted-quotes.svg" alt="">
+                    <img id="inverted-quotes-2" src="img/inverted-quotes.svg" alt="">
                 </div>
                 
             </div>
